# All-About-MCP

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
agents/: audiobook-generator.md  chapter-writer.md  curriculum-prompt-generator.md  markdown-pdf-converter.md  output-stitcher.md  style-guide-generator.md  tts-formatter.md
api-ref/: chatterbox.txt
inputs/: curriculum-transcript-formatted.md  curriculum-transcript-raw.md  curriculum.md
outputs/audio/: tts-formatted-text.txt  tts-formatted.ssml
outputs/chapter-prompts/: chapter-prompts.json
outputs/chapters/: chapter-01-introduction-to-mcp-origins-and-fundamentals.md  chapter-02-technical-deep-dive-transport-mechanisms-and-architectures.md  chapter-03-security-considerations-risks-and-mitigation-strategies.md  chapter-04-the-mcp-ecosystem-registries-fragmentation-and-tools.md  chapter-05-use-cases-and-limits-exploring-the-potential-of-mcp.md  chapter-06-industry-landscape-vendors-adoption-and-alternatives.md  chapter-07-enterprise-and-the-future-of-work-mcp-in-the-workplace.md  chapter-08-development-and-implementation-building-custom-mcps.md  chapter-09-global-and-public-sector-applications-open-data-and-government.md  chapter-10-evolving-mcp-the-future-and-roadmap.md  chapter-11-best-practices-for-mcp.md  chapter-12-mcp-wrap-up-and-future-directions.md
scripts/: generate_audiobook.py
src/: __init__.py  agents.py  audiobook.py  audiobook_generator.py  chapter_writer.py  config.py  gemini_client.py  main.py  pdf_converter.py  pdf_generator.py  pipeline.py  schemas.py  tasks.py
(+6 files in other folders)
